--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -64,6 +64,13 @@
     <wkhtmltox.version>0.10.0_rc2</wkhtmltox.version>
     <wsdl4j.version>1.5.0</wsdl4j.version>
   </properties>
+  <modules>
+
+    <module>pentaho-server-manual</module>
+
+    <!-- <module>assembly</module> -->
+
+  </modules>
 
   <build>
     <plugins>
@@ -73,6 +80,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>2.10</version>
+        <inherited>false</inherited>
         <executions>
           <execution>
             <id>unpack</id>
@@ -139,7 +147,7 @@
                   <artifactId>pentaho-karaf-assembly</artifactId>
                   <version>${project.version}</version>
                   <type>zip</type>
-                  <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                  <outputDirectory>${project.build.directory}/temp</outputDirectory>
                   <classifier>server</classifier>
                 </artifactItem>
                 <artifactItem>
@@ -499,6 +507,7 @@
     <plugin>
       <artifactId>maven-resources-plugin</artifactId>
       <version>3.0.1</version>
+      <inherited>false</inherited>
       <executions>
         <!-- Copy content of tomcat to pentaho-server dir -->
         <execution>
@@ -605,6 +614,7 @@
     <plugin>
       <artifactId>maven-war-plugin</artifactId>
       <version>2.6</version>
+      <inherited>false</inherited>
       <executions>
         <execution>
             <id>pentaho-war</id>
@@ -643,6 +653,7 @@
         <groupId>com.google.code.maven-replacer-plugin</groupId>
         <artifactId>replacer</artifactId>
         <version>${replacer.version}</version>
+        <inherited>false</inherited>
         <executions>
         <!-- modify tomcat/conf/server.xml for UTF-8 support -->
           <execution>
